--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<title>E-commerce and Baseball</title> 
 	<link rel="stylesheet" href="themes/themes.min.css" />
-        <link rel="stylesheet" href="jquery1.css" /> 
-        <script src="jquery2.js"></script> 
-        <script src="jquery3.js"></script> 
+        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile.structure-1.3.1.min.css" /> 
+        <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script> 
+        <script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script> 
 
 
 </head> 
